--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   flutter_staggered_grid_view: ^0.3.4
+  pie_chart: ^4.0.1
+
 
 
 dev_dependencies:
