--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^1.0.0
   flutter_staggered_grid_view: ^0.3.4
   pie_chart: ^4.0.1
+  clippy_flutter: ^1.1.1
+
 
 
 
