--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter_staggered_grid_view: ^0.3.4
   pie_chart: ^4.0.1
   clippy_flutter: ^1.1.1
+  url_launcher: ^5.7.10
+
 
 
 
